feat: schema shop

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "deploy:prod": "yarn build && pm2 start ecosystem.config.js --only airdrop-service-prod"
     },
     "dependencies": {
+        "@amplication/opentelemetry-nestjs": "4.3.7",
         "@babel/plugin-proposal-class-properties": "^7.18.6",
         "@nestjs/axios": "^3.0.2",
         "@nestjs/cache-manager": "^2.2.2",
@@ -17,13 +18,24 @@
         "@nestjs/common": "^10.2.7",
         "@nestjs/config": "^3.1.1",
         "@nestjs/core": "^10.2.7",
+        "@nestjs/event-emitter": "^2.0.4",
+        "@nestjs/graphql": "^12.1.1",
         "@nestjs/jwt": "^10.2.0",
-        "@nestjs/mongoose": "^10.0.5",
+        "@nestjs/microservices": "^10.3.8",
+        "@nestjs/mongoose": "^10.0.10",
         "@nestjs/platform-express": "^10.3.7",
         "@nestjs/schedule": "^4.0.2",
         "@nestjs/serve-static": "^4.0.2",
         "@nestjs/swagger": "^7.1.13",
         "@nestjs/terminus": "^10.1.1",
+        "@opentelemetry/api": "^1.7.0",
+        "@opentelemetry/auto-instrumentations-node": "^0.40.3",
+        "@opentelemetry/exporter-metrics-otlp-grpc": "^0.51.0",
+        "@opentelemetry/exporter-trace-otlp-proto": "^0.46.0",
+        "@opentelemetry/resources": "^1.19.0",
+        "@opentelemetry/sdk-metrics": "^1.19.0",
+        "@opentelemetry/sdk-trace-node": "^1.19.0",
+        "@opentelemetry/semantic-conventions": "^1.24.0",
         "@pinata/sdk": "^2.1.0",
         "@ton/core": "^0.56.3",
         "@ton/crypto": "^3.2.0",
@@ -40,7 +52,7 @@
         "dynamoose": "^4.0.0",
         "express": "^4.19.2",
         "ioredis": "^5.4.1",
-        "mongoose": "^8.3.1",
+        "mongoose": "^8.5.4",
         "nest-winston": "^1.9.4",
         "prettier": "^3.1.0",
         "reflect-metadata": "^0.1.13",
@@ -53,19 +65,7 @@
         "tonapi-sdk-js": "^1.0.3",
         "tonweb": "^0.0.66",
         "winston": "^3.11.0",
-        "winston-daily-rotate-file": "^5.0.0",
-        "@amplication/opentelemetry-nestjs": "4.3.7",
-        "@nestjs/event-emitter": "^2.0.4",
-        "@nestjs/graphql": "^12.1.1",
-        "@nestjs/microservices": "^10.3.8",
-        "@opentelemetry/api": "^1.7.0",
-        "@opentelemetry/auto-instrumentations-node": "^0.40.3",
-        "@opentelemetry/exporter-metrics-otlp-grpc": "^0.51.0",
-        "@opentelemetry/exporter-trace-otlp-proto": "^0.46.0",
-        "@opentelemetry/resources": "^1.19.0",
-        "@opentelemetry/sdk-metrics": "^1.19.0",
-        "@opentelemetry/sdk-trace-node": "^1.19.0",
-        "@opentelemetry/semantic-conventions": "^1.24.0"
+        "winston-daily-rotate-file": "^5.0.0"
     },
     "devDependencies": {
         "@nestjs/throttler": "^5.1.2",
