--- a/package.json
+++ b/package.json
@@ -43,10 +43,12 @@
         "async": "^3.2.4",
         "axios": "^1.6.8",
         "babel-plugin-transform-decorators-legacy": "^1.3.5",
+        "bcrypt": "^5.1.1",
         "cache-manager": "^5.5.3",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.0",
         "cookie-parser": "^1.4.6",
+        "crypto": "^1.0.1",
         "dayjs": "^1.11.10",
         "dotenv": "^16.4.5",
         "dynamoose": "^4.0.0",
@@ -70,6 +72,7 @@
     "devDependencies": {
         "@nestjs/throttler": "^5.1.2",
         "@types/async": "^3.2.22",
+        "@types/bcrypt": "^5.0.2",
         "@types/body-parser": "^1.19.5",
         "@types/cookie-parser": "^1.4.7",
         "@types/express": "^4.17.21",
